--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "embla-carousel-react": "^8.3.0",
     "framer-motion": "^11.10.0",
     "lucide-react": "^0.446.0",
     "next": "^14.2.14",
